--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -186,7 +186,7 @@ $(document).ready(function() {
             e.preventDefault();
             socket.emit('start_draft', {
                     room_id: "{{ room_data._id }}",
-                    console.log("well this worked")
+                    console.log("well this worked"),
                 });
 
     }
