--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -182,7 +182,7 @@ $(document).ready(function() {
         }  //end success
     });  //end ajax
 
-    document.getElementById('start_draft').onsubmit = function() {
+    document.getElementById('start_draft').onclick = function() {
             //e.preventDefault();
             console.log("the frig");
             socket.emit('start_draft', {
