--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -136,7 +136,7 @@ $(document).ready(function() {
     socket.on('start_draft_annc', function(data) {
         console.log(data);
         console.log("in receive socket");
-        $('#initial_message').remove
+        $('#initial_message').remove();
         $('#pick_list').append('<li><b>arsehole picks first</b></li>');
         //$('#pick_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
         //const newNode = document.createElement('div');
