--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -137,7 +137,8 @@ $(document).ready(function() {
         console.log(data);
         console.log("in receive socket");
         $('#initial_message').remove();
-        $('#pick_list').append('<li><b>arsehole picks first</b></li>');
+        $('#msg_list').append('<li><b>'+ data[0].username +'- picks first! </b></li>');
+        $('#pick_list').append('<li><b>list of arseholes</b></li>');
         //$('#pick_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
         //const newNode = document.createElement('div');
         //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
