troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -138,7 +138,10 @@ $(document).ready(function() {
         console.log("in receive socket");
         $('#initial_message').remove();
         $('#msg_list').append('<li><b>'+ data.pick_list[0][0] +'</b> - picks first! </li>');
-        $('#pick_list').append('<li><b>list of arseholes</b></li>');
+        $.each(data, function() {
+            $('#pick_list').append('<li><b>list of arseholes</b></li>');
+            )};
+            $('#pick_list').append('<li><b>list of arseholes</b></li>');
         //$('#pick_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
         //const newNode = document.createElement('div');
         //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
