--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -141,7 +141,7 @@ $(document).ready(function() {
         $.each(data, function() {
             $('#pick_list').append('<li><b>list of arseholes</b></li>');
             });
-            $('#pick_list').append('<li><b>list of arseholes</b></li>');
+            //$('#pick_list').append('<li><b>list of arseholes</b></li>');
         //$('#pick_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
         //const newNode = document.createElement('div');
         //newNode.innerHTML = `<b>${data.username}&nbsp;[$(data.created_at}]:&nbsp;</b> ${data.message}`;
