--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -139,7 +139,7 @@ $(document).ready(function() {
         $('#initial_message').remove();
         $('#msg_list').append('<li><b>'+ data.pick_list[0][0] +'</b> - picks first! </li>');
         $.each(data.pick_list, function() {
-            $('#pick_list').append('<li><b>' +$(this).attr('pick_list') +'</b></li>');
+            $('#pick_list').append('<li><b>' +$(this).attr((0)) +'</b></li>');
             });
             //$('#pick_list').append('<li><b>list of arseholes</b></li>');
         //$('#pick_list').append('<li><b>'+ data.username +': <b>' + data.message +'</li>');
