troubleshooting login email

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -8,7 +8,7 @@
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
 <br>
 <div>
-   <a href="#"><button type="submit" id="start_draft" class="btn btn-success" >Start Draft</a>
+    <a href="#"><button type="submit" id="start_draft" class="btn btn-primary" >Start Draft</button></a>
 
 </div>
 
