adding load pick to database functionality

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -161,7 +161,7 @@ $(document).ready(function() {
          +'</b> picked by ' + data['driver_pick']['username'] + '</li>');
         $('#msg_list').append('<li><b>'+ data["pick_data"]["next_pick"]["username"] +
          '</b> picks next.</li>');
-        $('#pool_pick_num).val() = data["pick_data"]["next_pick"]["pool_pick_num"]
+        $('#pool_pick_num).val() = data["pick_data"]["next_pick"]["pool_pick_num"];
 
     });
 
