--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -157,6 +157,7 @@ $(document).ready(function() {
         socket.on('driver_pick', function(data) {
         console.log(data);
         console.log("in receive driver pick");
+        let driver_id = data['driver_pick']['driver_id']
         $('#msg_list').append('<li><b>'+ data['driver_pick']['car_num'] + ' - ' + data['driver_pick']['drv_full']
          +'</b> picked by ' + data['driver_pick']['username'] + '</li>');
         $('#msg_list').append('<li><b>'+ data['driver_pick']['pick_data']['next_pick']['username']+
