--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -157,7 +157,8 @@ $(document).ready(function() {
         socket.on('driver_pick', function(data) {
         console.log(data);
         console.log("in receive driver pick");
-        let driver_id = data['driver_pick']['driver_id'];
+        //let driver_id = data['driver_pick']['driver_id'];
+        let driver_id = "85c06960-3610-4eff-9ef2-18641b84c952";
         console.log(driver_id);
         $('#msg_list').append('<li><b>'+ data['driver_pick']['car_num'] + ' - ' + data['driver_pick']['drv_full']
          +'</b> picked by ' + data['driver_pick']['username'] + '</li>');
