updating driver pick code

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -166,7 +166,7 @@ $(document).ready(function() {
          '</b> picks next.</li>');
         $('#pool_pick_num').val(data['driver_pick']['pick_data']['next_pick']['pool_pick_num']);
         $('#next_pick_username').val(data['driver_pick']['pick_data']['next_pick']['username']);
-        $('option[value=('driver_id')]').hide();
+        $('option[value='driver_id']').hide();
         //$('option[value=85c06960-3610-4eff-9ef2-18641b84c952]').hide();
 
     });
