--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h1>Welcome to Pool: {{room_data.room_name}}</h1>
-<h3>room id: {{room_data._id}}</h3>
+<h3>{{  username  }}</h3>
 <input type="hidden" id="room_idA" name="room_idA" value="{{  room_data._id  }}">
 <input type="hidden" id="pool_pick_num" name="pool_pick_num" value=1>
 <input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
@@ -51,7 +51,7 @@
 </ul>
 
 <h3>Pick Order</h3>
-<ul id="pick_list">
+<ul id="pick_list" >
 
         <li id="initial_message"> Draft not yet started </li>
 
