--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,14 +11,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item"><a class="nav-link" href="{{  url_for('home_template')  }}">Home</a></li>
-        {% if current_user.is_authenticated %}
-        <li class="nav-item" ><a class="nav-link" href="{{  url_for('logout')  }}">Log Out</a></li>
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="{{  url_for('login_template')  }}">Log In</a></li>
-        {% endif %}
-    </ul>
+    <nav class="navbar navbar-expand-sm bg-light">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item"><a class="nav-link" href="{{  url_for('home_template')  }}">Home</a></li>
+            {% if current_user.is_authenticated %}
+            <li class="nav-item" ><a class="nav-link" href="{{  url_for('logout')  }}">Log Out</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link" href="{{  url_for('login_template')  }}">Log In</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
 </head>
 
 <body>
