--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,7 +12,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js" integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-sm bg-light">
-        <ul class="nav justify-content-end">
+        <ul class="nav justify-content-right">
             <li class="nav-item"><a class="nav-link" href="{{  url_for('home_template')  }}">Home</a></li>
             {% if current_user.is_authenticated %}
             <li class="nav-item" ><a class="nav-link" href="{{  url_for('logout')  }}">Log Out</a></li>
