updating driver pick code

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -14,7 +14,7 @@ border: 2px;
 #pick_log{
 background-color: white;
 height: 300px;
-width: 300pc;
+width: 300px;
 overflow-y: scroll;
 border: 1px solid black;
 
