updating driver pick code

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -9,7 +9,10 @@
 <input type="hidden" id="pool_pick_num" name="pool_pick_num" value=1>
 <input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
 <br>
-<div>
+<div class="container p-3 my-3 border">
+
+    <textarea><b>To begin the draft, click on the Start Draft button below.</b></textarea>
+    <textarea><b>Before you click <b>Start Draft</b> ensure all members have joined the draft.</b></textarea>
     <a href="#"><button type="submit" id="start_draft" class="btn btn-primary" >Start Draft</button></a>
 
 </div>
