updating driver pick code

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -11,8 +11,8 @@
 <br>
 <div class="container p-3 my-3 border">
 
-    <textarea><b>To begin the draft, click on the Start Draft button below.</b></textarea>
-    <textarea><b>Before you click <b>Start Draft</b> ensure all members have joined the draft.</b></textarea>
+    <p><b>To begin the draft, click on the Start Draft button below.</b></p>
+    <p>Before you click <b>Start Draft</b> ensure all members have joined the draft.</p>
     <a href="#"><button type="submit" id="start_draft" class="btn btn-primary" >Start Draft</button></a>
 
 </div>
