--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -10,24 +10,25 @@
 <input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
 <br>
 
-<div class="row">
-        <div class="container p-3 my-3 border border-dark">
+<div class="container p-3 my-3 border border-dark">
+    <div class="row">
+
             <div class="col-sm-6">
                 <p><b>To begin the draft, click on the Start Draft button below.</b></p>
                 <p>Before you click <b>Start Draft</b> ensure all members have joined the draft.</p>
                 <a href="#"><button type="submit" id="start_draft" class="btn btn-primary" >Start Draft</button></a>
             </div>
-        </div>
-        <div class="container p-3 my-3 border border-dark">
+
+
             <div class="col-sm-6">
                 <p><b>Member Status:</b></p>
-                <ul>
+                <ol>
                 {% for member in room_members %}
-                <li>{{  member['_id']['username']  }}</li>
+                <li>{{  member._id.username  }}</li>
                 {% endfor %}
-                </ul>
+                </ol>
             </div>
-        </div>
+    </div>
 </div>
 
 <div class="container p-3 my-3 border">
