--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -10,7 +10,7 @@
 <input type="hidden" id="next_pick_username" name="next_pick_username" value=None>
 <br>
 </div>
-<div class="container p-3 my-3 border border-dark">
+<div class="container p-3 my-3 border border-primary">
     <div class="row">
 
             <div class="col-sm-6">
@@ -20,12 +20,18 @@
             </div>
 
 
-            <div class="col-sm-6">
+            <div class="col-sm-3">
                 <p><b>Member Status:</b></p>
                 <ol>
                 {% for member in room_members %}
                 <li>{{  member["_id"]["username"]  }}</li>
                 {% endfor %}
+                </ol>
+            </div>
+            <div class="col-sm-3">
+                <p><b>Pick Order:</b></p>
+                <ol id="pick_list" >
+                    <li id="initial_message"> Draft not yet started </li>
                 </ol>
             </div>
     </div>
@@ -76,10 +82,7 @@
 </div>
 
 <div class="container">
-    <h3>Pick Order</h3>
-    <ol id="pick_list" >
-        <li id="initial_message"> Draft not yet started </li>
-    </ol>
+
 </div>
 
 <script>
