updating driver pick code

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -37,18 +37,15 @@
     </div>
 </div>
 
-<div class="container p-3 my-3 border">
+<div class="container p-3 my-3 border border-primary">
     <div class="row">
         <div class="col-sm-6">
             <div class="formwrapper">
                 <div class="page-header" id="View_Pool_Driver_List"></div>
-
-                <div class="col-md-3" id="selectdriver">
                 <br>
                 {{  wtf.quick_form(form)  }}
                 <br>
-                </div>
-                <div>
+                 <div>
                     <a href="#"><button type="submit" id="choose_driver" class="btn btn-primary" >Choose Driver</button></a>
                 </div>
             </div>
@@ -65,9 +62,6 @@
 <br>
 <br>
 
-<div class="container p-3 my-3 border">
-
-</div>
 <br>
 
 <div class="container p-3 my-3 border">
