updating driver pick code

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -51,13 +51,13 @@
             </div>
         </div>
         <div class="col-sm-4">
-            <p>Pick Log:</p>
+            <p><b>Pick Log:</b></p>
             <ul id="pick_log">
                 <li>messages</li>
             </ul>
         </div>
         <div class="col-sm-4">
-            <h4>Chat:</h4>
+            <p><b>Chat:</b></p>
             <ul id="msg_list">
             <li>messages</li>
             </ul>
