updating driver pick code

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -18,7 +18,7 @@ overflow-y: auto;
 border: 1px solid black;
 
 }
-#msg_list_log{
+#msg_list{
 background-color: white;
 height: 100px;
 overflow-y: auto;
