--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -4,22 +4,22 @@
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 
-    <div class="container">
+    <div class="container p-3 my-3 border border-primary">
 
         <div class ="row">
-            <div class="column">
-                <h5 class="mt-0">Nascar Pool and Data</h5>
+            <div class="column-sm-12">
+                <h5 class="mt-0"><b>Nascar Pool Home Page</b></h5>
+                <p>Create a Pool for any of the 3 Nascar series or review historical driver data.</p>
+                <p>To create a new pool click on <b>Create Pool</b> button below.</p>
+                <p>Pools you are already included in can be found in the list below.</p>
             </div>
         </div>
-        <div class ="row">
-            <div class ="column">
-                <h6>Create a Pool for any of the 3 Nascar series or review historical driver data.</h6>
-            </div>
-        </div>
+
     </div>
-    <div class="container">
-        <h4>Join Room:</h4>
-        <center class="row">
+    <div class="container p-3 my-3 border border-primary">
+        <div class="row">
+        <h4>Join Room: (click on blue link to enter the draft)</h4>
+
             <div style="border:2px solid black" class="col-6 py-2">
                 <b>Race Name</b>
             </div>
@@ -35,12 +35,12 @@
                 </a>
             </div>
                 {% endfor %}
-        </center>
-    </div>
-    <div>
-        <a href="/nascar/pool"><button type="submit" class="btn btn-success" >Create Pool</button></a>
-        <a href="/nascar/data"><button type="submit" class="btn btn-success" >Review Data</button></a>
-        <a href="/nascar/admin"><button type="submit" class="btn btn-success" >Admin</button></a>
+        </div>
+        <br>
+
+        <a href="/nascar/pool"><button type="submit" class="btn btn-primary" >Create Pool</button></a>
+        <a href="/nascar/data"><button type="submit" class="btn btn-primary" >Review Data</button></a>
+        <a href="/nascar/admin"><button type="submit" class="btn btn-primary" >Admin</button></a>
     </div>
 
 
