--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -18,14 +18,16 @@
     </div>
 
         <div class="row">
-        <h4>Join Room: (click on blue link to enter the draft)</h4>
-
+            <h4>Join Room: (click on blue link to enter the draft)</h4>
+        </div>
+        <div class="row">
             <div style="border:2px solid black" class="col-6 py-2">
                 <b>Race Name</b>
             </div>
             <div style="border:2px solid black" class="col-6 py-2">
                 <b>Room Name</b>
             </div>
+        </div>
             {% for draft in drafts %}
             <div style="border:2px solid black" class="col-12">
 
@@ -35,13 +37,13 @@
                 </a>
             </div>
                 {% endfor %}
-        </div>
+
         <br>
 
         <a href="/nascar/pool"><button type="submit" class="btn btn-primary" >Create Pool</button></a>
         <a href="/nascar/data"><button type="submit" class="btn btn-primary" >Review Data</button></a>
         <a href="/nascar/admin"><button type="submit" class="btn btn-primary" >Admin</button></a>
-    
+
 
 
 
