updating driver pick code

--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -16,7 +16,7 @@
         </div>
 
     </div>
-    <div class="container p-3 my-3 border border-primary">
+    <div class="container p-3 my-3 ">
         <div class="row">
             <h4>Join Room: (click on blue link to enter the draft)</h4>
         </div>
