--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -217,7 +217,7 @@ $(document).ready(function() {
             withCredentials: true
         },
         crossDomain: true,
-        contentType: 'application/json; charset=utf-8'
+        #contentType: 'application/json; charset=utf-8'
         success: function(data) {
             console.log(data);
             driver_data = '';
