--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -208,7 +208,7 @@ $(document).ready(function() {
 
     $('#driver_list-driver option').remove();
     $.ajax({
-        type: "GET",
+        type: "POST",
         url: "/ajax_get_drivers",
         processData: "false",
         data: {room_id: $('#room_idA').val()},
