--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -99,7 +99,7 @@ $(document).ready(function() {
         document.getElementById('message_input_form').onsubmit = function(e) {
             e.preventDefault();
             let message = message_input.value.trim();
-            console.log(message);
+            //console.log(message);
             if (message.length) {
                 console.log(message);
                 socket.emit('send_messages', {
