--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -98,7 +98,7 @@ $(document).ready(function() {
 
         document.getElementById('message_input_form').onsubmit = function(e) {
             e.preventDefault();
-            let message = message_input.value.trim();
+            var message = message_input.value.trim();
             //console.log(message);
             if (message.length) {
                 console.log(message);
