troubleshooting ajax cross origin errors

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -219,7 +219,7 @@ $(document).ready(function() {
         crossDomain: true,
         contentType: 'application/json; charset=utf-8',
         success: function(data) {
-            console.log(data);
+            //console.log(data);
             driver_data = '';
             $.each(data, function() {
                 //race_id = toString($(this).attr('race_id');
