--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -220,11 +220,11 @@ $(document).ready(function() {
         contentType: 'application/json; charset=utf-8',
         success: function(data) {
             //console.log(data);
-            driver_data = '';
-            $.each(data, function() {
-                //race_id = toString($(this).attr('race_id');
-                driver_data += '<option value=\"' +$(this).attr('drv_id')+ '\">'+ $(this).attr('car_num') + ' - ' + $(this).attr('drv_full') +'</option>';
-            });  // end each
+            driver_data = 'sup';
+            //$.each(data, function() {
+            //    //race_id = toString($(this).attr('race_id');
+            //    driver_data += '<option value=\"' +$(this).attr('drv_id')+ '\">'+ $(this).attr('car_num') + ' - ' + $(this).attr('drv_full') +'</option>';
+            //});  // end each
             $('select[name="driver_list-driver"]').append(driver_data);
         }  //end success
     });  //end ajax
