--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -223,7 +223,7 @@ $(document).ready(function() {
             driver_data = '';
             $.each(data, function() {
                 //race_id = toString($(this).attr('race_id');
-                driver_data += '<option value=\"' +$(this).attr('drv_id')+ '\">'+ $(this).attr('car_num') + ' - ' + $(this).attr('drv_full') +'</option>';
+                driver_data += '<option value=\"' +$(this).attr("drv_id")+ '\">'+ $(this).attr("car_num") + ' - ' + $(this).attr("drv_full") +'</option>';
             });  // end each
             $('select[name="driver_list-driver"]').append(driver_data);
         }  //end success
