--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -220,7 +220,7 @@ $(document).ready(function() {
         contentType: 'application/json; charset=utf-8',
         success: function(data) {
             //console.log(data);
-            driver_data = '';
+            var driver_data = '';
             $.each(data, function() {
                 //race_id = toString($(this).attr('race_id');
                 driver_data += '<option value=\"' +$(this).attr("drv_id")+ '\">'+ $(this).attr("car_num") + ' - ' + $(this).attr("drv_full") +'</option>';
