--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -221,9 +221,11 @@ $(document).ready(function() {
         success: function(data) {
             //console.log(data);
             var driver_data = '';
-            $.each(data, function() {
+            //$.each(data, function() {
+            data.forEach(function() {
                 //race_id = toString($(this).attr('race_id');
-                driver_data += '<option value=\"' +$(this).attr("drv_id")+ '\">'+ $(this).attr("car_num") + ' - ' + $(this).attr("drv_full") +'</option>';
+                //driver_data += '<option value=\"' + $(this).attr("drv_id") + '\">'+ $(this).attr("car_num") + ' - ' + $(this).attr("drv_full") +'</option>';
+                driver_data += '<option value=\"' + this.attr("drv_id") + '\">'+ this.attr("car_num") + ' - ' + this.attr("drv_full") +'</option>';
             });  // end each
             $('select[name="driver_list-driver"]').append(driver_data);
         }  //end success
