--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -225,7 +225,7 @@ $(document).ready(function() {
             data.forEach(function(driver) {
                 //race_id = toString($(this).attr('race_id');
                 //driver_data += '<option value=\"' + $(this).attr("drv_id") + '\">'+ $(this).attr("car_num") + ' - ' + $(this).attr("drv_full") +'</option>';
-                driver_data += '<option value=\"' + this.getAttribute(driver["drv_id"]) + '\">'+ this.getAttribute(driver["car_num"]) + ' - ' + this.getAttribute(driver["drv_full"]) +'</option>';
+                driver_data += '<option value=\"' + this.getAttribute(driver.drv_id) + '\">'+ this.getAttribute(driver.car_num) + ' - ' + this.getAttribute(driver.drv_full) +'</option>';
             });  // end each
             $('select[name="driver_list-driver"]').append(driver_data);
         }  //end success
