troubleshooting ajax cross origin errors

--- a/src/templates/view_pool.html
+++ b/src/templates/view_pool.html
@@ -210,7 +210,7 @@ $(document).ready(function() {
     $.ajax({
         type: "GET",
         url: "/ajax_get_drivers",
-        processData: "false",
+        processData: "True",
         data: {room_id: $('#room_idA').val()},
         dataType:"json",
         xhrfields: {
