--- a/src/templates/nascar_home.html
+++ b/src/templates/nascar_home.html
@@ -41,7 +41,7 @@
         <br>
 
         <a href="/nascar/pool"><button type="submit" class="btn btn-primary" >Create Pool</button></a>
-        <a href="/nascar/data"><button type="submit" class="btn btn-primary" >Review Data</button></a>
+        <a href="/nascar/results/3272cde1328249abbd6e39bc540f78dc"><button type="submit" class="btn btn-primary" >Pool Results</button></a>
         <a href="/nascar/admin"><button type="submit" class="btn btn-primary" >Admin</button></a>
     </div>
 
