--- a/src/templates/pool_results.html
+++ b/src/templates/pool_results.html
@@ -12,7 +12,7 @@
         <thead class="thead-light">
             <tr>
                 {% for user in users %}
-                <th scope="col">{{ user["username"] }}</th>
+                <th scope="col">{{ user }}</th>
                 {% endfor %}
             </tr>
         </thead>
